feat(jqwik-micronaut): #4 Added parameter to configure lifecycle cleanup per property or try (#6)
feat(jqwik-micronaut): Added annotation parameter to configure whether lifecycle cleanup should be done on a per property or per try basis. Closes #4